[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/start/login_api.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/HeadlinerNo45-59y8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Azonix.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 1
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 5
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[node name="login" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -1388.83
margin_top = -868.098
margin_right = 2651.17
margin_bottom = 2049.9
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="titulo" type="Label" parent="."]
margin_left = 420.706
margin_top = 57.8992
margin_right = 534.706
margin_bottom = 88.8992
custom_fonts/font = SubResource( 1 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro" type="Label" parent="."]
margin_left = 322.651
margin_top = 360.0
margin_right = 655.651
margin_bottom = 389.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_entrar" type="Button" parent="."]
margin_left = 428.1
margin_top = 287.3
margin_right = 543.1
margin_bottom = 345.3
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "go"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="user" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 112.0
margin_right = 576.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 4 )
secret_character = "#"
clear_button_enabled = true
selecting_enabled = false
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 200.0
margin_right = 576.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 5 )
secret = true
secret_character = "?"
clear_button_enabled = true
selecting_enabled = false
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="new_btn" type="Button" parent="."]
margin_left = 357.0
margin_top = 396.0
margin_right = 618.0
margin_bottom = 454.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Sign up"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="bt_entrar" to="." method="_on_bt_entrar_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="new_btn" to="." method="_on_new_btn_pressed"]
